--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -4,3 +4,6 @@
 //@import "abstractions/{YOUR FILE NAME HERE}";
 //@import "base/{YOUR FILE NAME HERE}";
 //@import "components/{YOUR FILE NAME HERE}";
+
+
+@import "base/off-canvas.base.scss";
