added bower package breakpoint-sass

--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -1,4 +1,5 @@
 @import "bowerimports/cssowl/lib/scss/cssowl";
+@import "bowerimports/compass-breakpoint/stylesheets/_breakpoint.scss";
 
 // Import variables, abstractions, base styles and components.
 // Uncomment the next lines and adjust them to your needs.
