--- a/sites/all/themes/wttoc/sass/base/base.scss
+++ b/sites/all/themes/wttoc/sass/base/base.scss
@@ -1,13 +1,3 @@
-
-/*
- * Background Image for Content Area
- */
-body .l-main {
-    background-color: #f3efef;
-    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAIAAAAmkwkpAAAAIUlEQVR4AWN48+zZxzdvPr9/D0QMcBZQlAHCgsiDOHCVAIb0LI0GCKCPAAAAAElFTkSuQmCC');
-    background-repeat: repeat;
-}
-
 /*
  * Set Up Font Size % For Rem
  */
@@ -19,4 +9,23 @@ html {
 	@include breakpoint($breakpointWideP1){
 		font-size: 57.5%;	
 	};
+}
+/*
+ * Img Reset
+ */
+img{
+	width:auto;
+	height:auto;
+}
+/*
+ * Admin Menu Margin
+ */
+body.admin-menu{
+	#admin-menu{
+	    min-width: 50px;
+	    height: 80px;
+	}
+	.l-page{
+		margin-top:80px;
+	}
 }
