--- a/sites/all/themes/wttoc/sass/components/components.scss
+++ b/sites/all/themes/wttoc/sass/components/components.scss
@@ -6,10 +6,26 @@
 	@include defaultBigBox;
 	@include clearfix;
 }
+.l-header{
+	background-color:$color1;
+	@include colorDescendantsFont($WHITE);
+}
+.l-main{
+	max-width: $defaultWindowSize;
+	@include colorDescendantsFont($DARKGRAY);
+}
+.l-footer{
+	margin-bottom:0;
+}
 
 /*
  * Header Regions
  */
+.l-superheader{
+	min-height:$superheaderMinHeight;
+	background-color:$color1Dark;
+	@include colorDescendantsFont($WHITE);
+}
 .l-region--header{
 	width:100%;
 	@include breakpoint($breakpointWideP1){
@@ -27,6 +43,19 @@
 	@include breakpoint($tablet2Wide){
 		@include splitLeft(50%);	
 	};
+	.site-logo{
+		img{
+			height:$logoMobileHeight;
+			padding:5px 10px;
+			padding-left:$superheaderMinHeight / 3;
+			@include breakpoint($breakpointWideP1){
+				height:$logoMobileHeight * $breakpointWide / $breakpointMobile;
+			};
+			@include breakpoint($tablet2Wide){
+				height:$logoMobileHeight * $breakpointTablet / $breakpointMobile;
+			};
+		}
+	}
 }
 .l-region--navigation{
 	@include clearboth;
@@ -35,47 +64,115 @@
 /*
  * Content Regions
  */ 
-
+.l-content {
+	background-color: $LIGHTGRAY;
+	background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAIAAAAmkwkpAAAAIUlEQVR4AWN48+zZxzdvPr9/D0QMcBZQlAHCgsiDOHCVAIb0LI0GCKCPAAAAAElFTkSuQmCC');
+	background-repeat: repeat;
+	@include colorDescendantsFont($DARKGRAY);
+}
+.l-region--sidebar-first{
+	background-color: $color2;
+	@include colorDescendantsFont($WHITE);	
+}
+.l-region--sidebar-second{
+	background-color: $color3;
+	@include colorDescendantsFont($WHITE);
+	
+}
 .l-region--highlighted,.l-region--help{
 	@include clearfix;
 	@include clearboth;
 }
-.l-content{
-	width:100%;
-	float:left;
-	@include breakpoint($breakpointWideP1){
-		@include chop3Middle(50%);
-		/* BECAUSE .l-region--sidebar-first COMES AFTER .l-content */
-		/* MARGIN-LEFT = WIDTH(.l-region--sidebar-first) + $columnPercentSpacer / 4  */
-		margin-left:25% + $columnPercentSpacer / 4;
-	};
-	@include breakpoint($tablet2Wide){
-		@include splitLeft(66.66%);
-	};
+body.two-sidebars{
+	.l-content{
+		width:100%;
+		float:left;
+		@include breakpoint($breakpointWideP1){
+			@include chop3Middle(50%);
+			/* BECAUSE .l-region--sidebar-first COMES AFTER .l-content */
+			/* MARGIN-LEFT = WIDTH(.l-region--sidebar-first) + $columnPercentSpacer / 4  */
+			margin-left:25% + $columnPercentSpacer / 4;
+		};
+		@include breakpoint($tablet2Wide){
+			@include splitLeft(66.66%);
+		};
+	}
+	.l-region--sidebar-first{
+		width:100%;
+		float:left;
+		@include breakpoint($breakpointWideP1){
+			@include chop3Left(25%);
+			/* BECAUSE .l-region--sidebar-first COMES AFTER .l-content */
+			/* MARGIN-LEFT = -1 * WIDTH(.l-region--sidebar-first + .l-content)  */
+			margin-left:-75%;
+		};
+		@include breakpoint($tablet2Wide){
+			@include splitRight(33.33%);
+		};
+	}
+	.l-region--sidebar-second{
+		width:100%;
+		float:right;
+		@include breakpoint($breakpointWideP1){
+			@include chop3Right(25%);
+		};
+		@include breakpoint($tablet2Wide){
+			@include splitRight(33.33%);
+		};
+	}
 }
-.l-region--sidebar-first{
-	width:100%;
-	float:left;
-	@include breakpoint($breakpointWideP1){
-		@include chop3Left(25%);
-		/* BECAUSE .l-region--sidebar-first COMES AFTER .l-content */
-		/* MARGIN-LEFT = -1 * WIDTH(.l-region--sidebar-first + .l-content)  */
-		margin-left:-75%;
-	};
-	@include breakpoint($tablet2Wide){
-		@include splitRight(33.33%);
-	};
+body.one-sidebar.sidebar-first{
+	.l-content{
+		width:100%;
+		float:left;
+		@include breakpoint($breakpointWideP1){
+			@include splitLeft(75%);
+		};
+		@include breakpoint($tablet2Wide){
+			@include splitLeft(66.66%);
+		};
+	}
+	.l-region--sidebar-first{
+		width:100%;
+		float:left;
+		@include breakpoint($breakpointWideP1){
+			@include splitRight(25%);
+		};
+		@include breakpoint($tablet2Wide){
+			@include splitRight(33.33%);
+		};
+	}
 }
-.l-region--sidebar-second{
-	width:100%;
-	float:right;
-	@include breakpoint($breakpointWideP1){
-		@include chop3Right(25%);
-	};
-	@include breakpoint($tablet2Wide){
-		@include splitRight(33.33%);
-	};
+body.one-sidebar.sidebar-second{
+	.l-content{
+		width:100%;
+		float:left;
+		@include breakpoint($breakpointWideP1){
+			@include splitLeft(75%);
+		};
+		@include breakpoint($tablet2Wide){
+			@include splitLeft(66.66%);
+		};
+	}
+	.l-region--sidebar-second{
+		width:100%;
+		float:left;
+		@include breakpoint($breakpointWideP1){
+			@include splitRight(25%);
+		};
+		@include breakpoint($tablet2Wide){
+			@include splitRight(33.33%);
+		};
+	}
 }
+/*
+ * Footer
+ */
+footer.l-footer{
+	background-color:$DARKGRAY;
+	@include colorDescendantsFont($WHITE);
+}
+
 /*
  * Default Font Size
  */
