--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -5,6 +5,7 @@
 @import "abstractions/abstractions";
 @import "base/base";
 @import "components/components";
+@import "components/off-canvas";
 
 // Import variables, abstractions, base styles and components.
 // Uncomment the next lines and adjust them to your needs.
